feat: live image recognition with mobilenet; bottom tabs

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "images-test",
     "slug": "images-test",
     "version": "1.0.0",
+    "scheme": "myapp",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
