--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "images-test",
+  "name": "my-test",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,12 +10,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^3.15.0",
+    "@tensorflow/tfjs-backend-cpu": "^3.15.0",
+    "@tensorflow/tfjs-backend-webgl": "^3.15.0",
+    "@tensorflow/tfjs-converter": "^3.15.0",
+    "@tensorflow/tfjs-core": "^3.15.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
+    "@unimodules/core": "~7.2.0",
+    "@unimodules/react-native-adapter": "~6.5.0",
     "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "expo-camera": "~12.1.2",
+    "expo-gl": "^11.1.1",
+    "expo-gl-cpp": "^11.1.1",
+    "expo-linking": "^3.0.0",
+    "expo-status-bar": "^1.2.0",
+    "metro-config": "^0.69.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native": "^0.64.3",
+    "react-native-fs": "^2.19.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
